# AltCAT

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py  test.py
backend/app/llm/: client.py  image_utils.py  prompt_util.py  prompts.yaml
backend/app/llm/translator/: __init__.py  translator.py  translator.yaml
backend/app/parser/: __init__.py  config.py  parser.py  utils.py
backend/app/schemas/: alt_text.py  parser.py  translation.py
front/: package-lock.json  package.json  tailwind.config.js
front/public/: urlMappings.json  urlMappings.template.json
front/src/app/: api.tsx  globals.css  layout.tsx  page.tsx  types.ts  urlMappings.ts
front/src/app/api/proxy/: route.ts
front/src/app/components/: ImageCard.tsx  MainContent.tsx  Sidebar.tsx  TopBar.tsx
poc/: gpt4o_classification_test.ipynb  gpt4o_validation_test.ipynb  gpto4_langgraph_test.ipynb  groq_validation_test.ipynb  huggingface_validation_test.ipynb  prompts.yaml  requirements.txt  streamlit_app.py  translator.yaml
tmp/: section508_parse_url.json
